# auto-portfolio

./: .gitignore  DB_SCHEMA.md  README.md  docker-compose.yml  plan.md  start.sh
portfolio_agent/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
portfolio_agent/config/: reviewers.yaml  rules_config.yaml
portfolio_agent/config/prompts/: analyze_system.txt  analyze_user.j2  feedback_system.txt  feedback_user.j2  generate_system.txt  generate_user.j2  preprocess_system.txt  preprocess_user.j2
portfolio_agent/docker/: entrypoint.sh
portfolio_agent/migrations/: env.py
portfolio_agent/migrations/versions/: 0001_initial.py
portfolio_agent/src/portfolio_agent/: api.py  cli.py  deps.py  llm.py  notifications.py  prompts.py  rules.py  scheduler.py  secrets_scrub.py  settings.py  state.py  types.py
portfolio_agent/src/portfolio_agent/agents/: analyzer.py  extractor.py  feedback.py  generator.py  preprocessor.py
portfolio_agent/src/portfolio_agent/db/: cursor_chats.py  engine.py  operational.py  users.py
portfolio_agent/src/portfolio_agent/gdocs/: auth.py  client.py  comments_reader.py  portfolio_writer.py
portfolio_agent/src/portfolio_agent/graphs/: feedback_graph.py  portfolio_graph.py
